fix spacing in mobile for index page

--- a/index/styles.css
+++ b/index/styles.css
@@ -107,6 +107,12 @@ header p {
   transition: all ease-in-out 300ms;
 }
 
+@media (max-width: 535px) {
+  .menu li + li {
+    margin-top: 30px;
+  }
+}
+
 @media (min-width: 768px) {
   .menu-item:hover {
     box-shadow: 0px 37px 20px -20px rgba(0,0,0,0.2);
